--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
             <div class="card card2" style="max-width: 100%">
               <div class="row no-gutters">
                 <div class="col-md-6">
-                  <img src="images/pizza1.png" class="w-100">
+                  <img src="images/pizza3.jpg" class="w-100">
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title"><span>UNLIMITED</span><br>MEDIUM PIZZAS</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a
-                      natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Medium 2-toppings pizza(Ksh.200/= each)</p>
+                    <p>Additional charge for premium toppings. Minimum of 2 required</p>
+                    <p class="price">Ksh. 1100/=</p>
                     <button type="button"><a href="#">ORDER NOW</a></button>
                   </div>
                 </div>
@@ -82,9 +83,11 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <h5 class="card-title"><span>UNLIMITED</span><br>MEDIUM PIZZAS</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a
-                      natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title"><span>LARGE</span><br>PIZZAS, WINGS, DRINK + DIPS</h5>
+                    <p class="card-text">Large PIzza + 3 Toppings + 10pcs. Chicken Wings
+                      or Bites + a Drink(large) + 2 Dips</p>
+                      <p>Additional charge for premium toppings</p><br>
+                      <p class="price">Ksh. 2000/=</p>
                     <button type="button"><a href="#">ORDER NOW</a></button>
                   </div>
                 </div>
@@ -100,9 +103,11 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <h5 class="card-title"><span>UNLIMITED</span><br>MEDIUM PIZZAS</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a
-                      natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title"><span>2</span><br>MEDIUM PIZZAS, DRINK + DIPS</h5>
+                    <p class="card-text">2 Medium Pizzas + 4 Toppings (combined) + a Drink(large)
+                      + 2 Dips. Upsize to large for Ksh, 600/=</p>
+                      <p>Additional charge for premium toppings</p>
+                      <p class="price">Ksh. 1800/=</p>
                     <button type="button"><a href="#">ORDER NOW</a></button>
                   </div>
                 </div>
