--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
             </div>
           </div>
         </div>
+        <a class="carousel-control-prev" href="#specialslides" role="button" data-slide="prev">
+          <img src="images/slidearrow.png" class="arrow" style=" transform: rotate(20deg);">
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#specialslides" role="button" data-slide="next">
+          <img src="images/slidearrow.png" class="arrow" style=" transform: rotate(210deg);">
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </div>
