--- a/index.html
+++ b/index.html
@@ -50,33 +50,33 @@
       </div>
     </div>
   </div>
+
   <div class="container">
     <div class="specialslides">
-
       <div id="specialslides" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="card card2" style="max-width: 100%">
+            <div class="card" style="max-width: 100%">
               <div class="row no-gutters">
                 <div class="col-md-6">
-                  <img src="images/pizza3.jpg" class="w-100">
+                  <img src="images/pizza3.png" class="w-100">
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <h5 class="card-title"><span>UNLIMITED</span><br>MEDIUM PIZZAS</h5>
+                    <h5 class="card-title"><span>UNLIMITED</span><br>MEDIUM PIZZAS,DRINK + DIPS</h5>
                     <p class="card-text">Medium 2-toppings pizza(Ksh.200/= each)</p>
-                    <p>Additional charge for premium toppings. Minimum of 2 required</p>
+                    <p>Additional charge for premium toppings. Minimum of 2 required</p><br>
                     <p class="price">Ksh. 1100/=</p>
                     <button type="button"><a href="#">ORDER NOW</a></button>
                   </div>
                 </div>
               </div>
             </div>
-            
+
           </div>
 
           <div class="carousel-item">
-            <div class="card card2" style="max-width: 100%">
+            <div class="card" style="max-width: 100%">
               <div class="row no-gutters">
                 <div class="col-md-6">
                   <img src="images/pizza1.png" class="w-100">
@@ -86,8 +86,8 @@
                     <h5 class="card-title"><span>LARGE</span><br>PIZZAS, WINGS, DRINK + DIPS</h5>
                     <p class="card-text">Large PIzza + 3 Toppings + 10pcs. Chicken Wings
                       or Bites + a Drink(large) + 2 Dips</p>
-                      <p>Additional charge for premium toppings</p><br>
-                      <p class="price">Ksh. 2000/=</p>
+                    <p>Additional charge for premium toppings</p>
+                    <p class="price">Ksh. 2000/=</p>
                     <button type="button"><a href="#">ORDER NOW</a></button>
                   </div>
                 </div>
@@ -96,7 +96,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="card card3" style="max-width: 100%">
+            <div class="card" style="max-width: 100%">
               <div class="row no-gutters">
                 <div class="col-md-6">
                   <img src="images/pizza1.png" class="w-100">
@@ -106,8 +106,8 @@
                     <h5 class="card-title"><span>2</span><br>MEDIUM PIZZAS, DRINK + DIPS</h5>
                     <p class="card-text">2 Medium Pizzas + 4 Toppings (combined) + a Drink(large)
                       + 2 Dips. Upsize to large for Ksh, 600/=</p>
-                      <p>Additional charge for premium toppings</p>
-                      <p class="price">Ksh. 1800/=</p>
+                    <p>Additional charge for premium toppings</p>
+                    <p class="price">Ksh. 1800/=</p>
                     <button type="button"><a href="#">ORDER NOW</a></button>
                   </div>
                 </div>
@@ -115,18 +115,30 @@
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#specialslides" role="button" data-slide="prev">
+        <a class="carousel-control-prev d-none d-md-block" href="#specialslides" role="button" data-slide="prev">
           <img src="images/slidearrow.png" class="arrow" style=" transform: rotate(20deg);">
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#specialslides" role="button" data-slide="next">
+        <a class="carousel-control-next d-none d-md-block" href="#specialslides" role="button" data-slide="next">
           <img src="images/slidearrow.png" class="arrow" style=" transform: rotate(210deg);">
           <span class="sr-only">Next</span>
         </a>
       </div>
     </div>
-  </div>
+  </div><br><br>
 
+  <div class="container">
+    <div class="menugallery">
+      <h1>MENU</h1>
+      <a href="#" class="custom-card" style="text-decoration: none;">
+        <div class="card text-white bg-primary custom-card" style="max-width: 25%; max-height: 500px;">
+          <div class="card-header">MEAT FAVOURITES</div>
+          <div class="card-body">
+            <img src="images/pizza3.png" width="100%" height="100%">
+          </div>
+      </a>
+    </div>
+  </div>
 
 
 
