--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <div class="container">
     <div class="specialslides">
-      <div id="specialslides" class="carousel slide" data-ride="carousel">
+      <div id="specialslides" class="carousel slide" data-interval="8000" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card" style="max-width: 100%">
@@ -130,12 +130,16 @@
   <div class="container">
     <div class="menugallery">
       <h1>MENU</h1>
-      <a href="#" class="custom-card" style="text-decoration: none;">
-        <div class="card text-white bg-primary custom-card" style="max-width: 25%; max-height: 500px;">
-          <div class="card-header">MEAT FAVOURITES</div>
-          <div class="card-body">
-            <img src="images/pizza3.png" width="100%" height="100%">
+      <a href="#" class="custom-card">
+        <div class="card-group">
+          <div class="card text-white custom-card" style="max-width: 25%;">
+            <div class="row">
+              <div class="col-md-12">
+                <h2 class="card-title">MEAT FAVOURITES</h2>
+              </div>
+            </div>
           </div>
+        </div>
       </a>
     </div>
   </div>
