--- a/index.html
+++ b/index.html
@@ -130,19 +130,61 @@
   <div class="container">
     <div class="menugallery">
       <h1>MENU</h1>
-      <a href="#" class="custom-card">
-        <div class="card-group">
-          <div class="card text-white custom-card" style="max-width: 25%;">
-            <div class="row">
-              <div class="col-md-12">
-                <h2 class="card-title">MEAT FAVOURITES</h2>
-              </div>
+      <div class="row">
+        
+        <div class="col-sm-3">
+          <div class="card card1">
+            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <div class="card-body">
+              <h5 class="card-title">MEAT FAVOURITES</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
         </div>
-      </a>
+
+        <div class="col-sm-3">
+          <div class="card card2">
+            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <div class="card-body">
+              <h5 class="card-title">VEGGIE FAVOURITES</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <div class="card card3">
+            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <div class="card-body">
+              <h5 class="card-title">GOURMET THINS</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <div class="card card4">
+            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                additional
+                content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
     </div>
-  </div>
 
 
 
@@ -154,15 +196,15 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
