--- a/index.html
+++ b/index.html
@@ -131,58 +131,59 @@
     <div class="menugallery">
       <h1>MENU</h1>
       <div class="row">
-        
+
         <div class="col-sm-3">
           <div class="card card1">
-            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <img src="images/pizza6.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
               <h5 class="card-title">MEAT FAVOURITES</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text">Classic marinara sauce, authentic old-world pepperoni,
+                all-natural Italian sausage, slow-roasted ham, hardwood smoked bacon, seasoned
+                pork and beef.</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
           </div>
         </div>
 
         <div class="col-sm-3">
           <div class="card card2">
-            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <img src="images/pizza4.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
               <h5 class="card-title">VEGGIE FAVOURITES</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                additional
-                content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text">roasted red peppers, baby spinach, onions, mushrooms, tomatoes,
+                and black olives. It's also topped with cheese It's an awesome way to
+                eat your vegetables!</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
           </div>
         </div>
 
         <div class="col-sm-3">
           <div class="card card3">
-            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <img src="images/pizza5.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
               <h5 class="card-title">GOURMET THINS</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                additional
-                content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text">carefully prepared specialty pizza made with ingredients
+                not normally found on pizza, includes a wider variety of toppings and a more intricate
+                preparation process.</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
           </div>
         </div>
 
         <div class="col-sm-3">
           <div class="card card4">
-            <img src="images/pizza3.png" class="card-img-top" alt="offer">
+            <img src="images/pizza7.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                additional
-                content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h5 class="card-title">CRUSTS</h5>
+              <p class="card-text">We have various crust like: Keto pepperoni, Keto protein, 
+              Keto Pesto Margherita, Cauli Super Plant, Cauliflower Crust pizza, Cauli pesto
+              and Cauli blanca</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
 
