--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
     <div class="menugallery">
       <h1>MENU</h1>
       <div class="row">
-
         <div class="col-sm-3">
           <div class="card card1">
             <img src="images/pizza6.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
-              <h5 class="card-title">MEAT FAVOURITES</h5>
+              <h5 class="card-title">MEAT PIZZAS</h5>
               <p class="card-text">Classic marinara sauce, authentic old-world pepperoni,
                 all-natural Italian sausage, slow-roasted ham, hardwood smoked bacon, seasoned
                 pork and beef.</p>
@@ -149,7 +148,7 @@
           <div class="card card2">
             <img src="images/pizza4.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
-              <h5 class="card-title">VEGGIE FAVOURITES</h5>
+              <h5 class="card-title">VEGGIE PIZZAS</h5>
               <p class="card-text">roasted red peppers, baby spinach, onions, mushrooms, tomatoes,
                 and black olives. It's also topped with cheese It's an awesome way to
                 eat your vegetables!</p>
@@ -176,9 +175,60 @@
             <img src="images/pizza7.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
               <h5 class="card-title">CRUSTS</h5>
-              <p class="card-text">We have various crust like: Keto pepperoni, Keto protein, 
-              Keto Pesto Margherita, Cauli Super Plant, Cauliflower Crust pizza, Cauli pesto
-              and Cauli blanca</p>
+              <p class="card-text">We have various crust like: Keto pepperoni, Keto protein,
+                Keto Pesto Margherita, Cauli Super Plant, Cauliflower Crust pizza, Cauli pesto
+                and Cauli blanca</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
+            </div>
+          </div>
+        </div>
+
+      </div> <br>
+
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="card card1">
+            <img src="images/drinks.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
+            <div class="card-body">
+              <h5 class="card-title">DRINKS</h5>
+              <p class="card-text">We have various drinks to take with your pizza, taking pizza
+               without a drink by your side can be boring.</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <div class="card card1">
+            <img src="images/salads.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
+            <div class="card-body">
+              <h5 class="card-title">SALADS</h5>
+              <p class="card-text">We have various salads to take with your pizza, make your pizza
+                eating healthy with salads.</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <div class="card card1">
+            <img src="images/wings.jpeg" class="card-img-top" alt="offer" width="100%" height="168px">
+            <div class="card-body">
+              <h5 class="card-title">WINGS</h5>
+              <p class="card-text">We offer a variety of chicken wings. Eat to your fill, its a 
+                good accompaniment with pizza.</p>
+              <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <div class="card card1">
+            <img src="images/dips.jpg" class="card-img-top" alt="offer" width="100%" height="168px">
+            <div class="card-body">
+              <h5 class="card-title">DIPS</h5>
+              <p class="card-text">We offer a variety of dips like: BBQ sauce, HOT sauce,
+                MARINARA sauce and RANCH sauce.</p>
               <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
           </div>
