--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="card-body">
               <h5 class="card-title">DRINKS</h5>
               <p class="card-text">We have various drinks to take with your pizza, taking pizza
-               without a drink by your side can be boring.</p>
+                without a drink by your side can be boring.</p>
               <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
           </div>
@@ -215,7 +215,7 @@
             <img src="images/wings.jpeg" class="card-img-top" alt="offer" width="100%" height="168px">
             <div class="card-body">
               <h5 class="card-title">WINGS</h5>
-              <p class="card-text">We offer a variety of chicken wings. Eat to your fill, its a 
+              <p class="card-text">We offer a variety of chicken wings. Eat to your fill, its a
                 good accompaniment with pizza.</p>
               <center><button type="submit"><a href="#">CHECK OUT</a></button></center>
             </div>
@@ -236,26 +236,88 @@
 
       </div>
     </div>
+  </div>
+
+  <div class="container">
+    <div class="all-for-you">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>ALL FOR YOU</h1>
+        </div>
+        <div class="col-md-6">
+          <a href="#">See all&nbsp;<img src="images/see-all.png" alt="see all"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="slides-for-you">
+      <div id="all-for-youCarousel" class="carousel slide carousel-multi-item" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <div class="col-md-3" style="float:left">
+              <div class="card mb-2">
+                <img src="images/movie.jpg" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Card title</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3" style="float:left">
+              <div class="card mb-2">
+                <img src="images/movie.jpg" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Card title</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3" style="float:left">
+              <div class="card mb-2">
+                <img src="images/movie.jpg" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Card title</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3" style="float:left">
+              <div class="card mb-2">
+                <img src="images/movie.jpg" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Card title</h4>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+        <a class="carousel-control-prev w-auto" href="#all-for-youCarousel" role="button" data-slide="prev">
+          <img src="images/see-all.png" class="for-you-arrow-prev" alt="see all">
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next w-auto" href="#all-for-youCarousel" role="button" data-slide="next">
+          <img src="images/see-all.png" class="for-you-arrow-next" alt="see all">
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
 
 
-
-
-
-
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
