--- a/index.html
+++ b/index.html
@@ -253,56 +253,44 @@
 
   <div class="container">
     <div class="slides-for-you">
-      <div id="all-for-youCarousel" class="carousel slide carousel-multi-item" data-ride="carousel">
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <div class="col-md-3" style="float:left">
-              <div class="card mb-2">
-                <img src="images/movie.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h4 class="card-title">Card title</h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-3" style="float:left">
-              <div class="card mb-2">
-                <img src="images/movie.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h4 class="card-title">Card title</h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-3" style="float:left">
-              <div class="card mb-2">
-                <img src="images/movie.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h4 class="card-title">Card title</h4>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-3" style="float:left">
-              <div class="card mb-2">
-                <img src="images/movie.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h4 class="card-title">Card title</h4>
-                </div>
-              </div>
-            </div>
-
+      <div class="col-md-3" style="float:left">
+        <div class="card mb-2">
+          <img src="images/movie.jpg" class="card-img-top" width="100%" height="168px">
+          <div class="card-body">
+            <h4 class="card-title"><a href="#">MOVIE NIGHT</a></h4>
+            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
           </div>
-
         </div>
-        <a class="carousel-control-prev w-auto" href="#all-for-youCarousel" role="button" data-slide="prev">
-          <img src="images/see-all.png" class="for-you-arrow-prev" alt="see all">
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next w-auto" href="#all-for-youCarousel" role="button" data-slide="next">
-          <img src="images/see-all.png" class="for-you-arrow-next" alt="see all">
-          <span class="sr-only">Next</span>
-        </a>
+      </div>
+
+      <div class="col-md-3" style="float:left">
+        <div class="card mb-2">
+          <img src="images/veggie.jpg" class="card-img-top" width="100%" height="168px">
+          <div class="card-body">
+            <h4 class="card-title"><a href="#">VEGGIE DINE</a></h4>
+            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3" style="float:left">
+        <div class="card mb-2">
+          <img src="images/happyfamily.jpg" class="card-img-top" width="100%" height="168px">
+          <div class="card-body">
+            <h4 class="card-title"><a href="#">HAPPY FAMILY</a></h4>
+            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3" style="float:left">
+        <div class="card mb-2">
+          <img src="images/coupleup.jpg" class="card-img-top" width="100%" height="168px">
+          <div class="card-body">
+            <h4 class="card-title"><a href="#">COUPLE-UP</a></h4>
+            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+          </div>
+        </div>
       </div>
     </div>
   </div>
