--- a/index.html
+++ b/index.html
@@ -256,40 +256,48 @@
       <div class="col-md-3" style="float:left">
         <div class="card mb-2">
           <img src="images/movie.jpg" class="card-img-top" width="100%" height="168px">
-          <div class="card-body">
-            <h4 class="card-title"><a href="#">MOVIE NIGHT</a></h4>
-            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
-          </div>
+          <a href="#">
+            <div class="card-body">
+              <h4 class="card-title">MOVIE NIGHT</h4>
+              <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+            </div>
+          </a>
         </div>
       </div>
 
       <div class="col-md-3" style="float:left">
         <div class="card mb-2">
           <img src="images/veggie.jpg" class="card-img-top" width="100%" height="168px">
-          <div class="card-body">
-            <h4 class="card-title"><a href="#">VEGGIE DINE</a></h4>
-            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
-          </div>
+          <a href="#">
+            <div class="card-body">
+              <h4 class="card-title">VEGGIE DINE</h4>
+              <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+            </div>
+          </a>
         </div>
       </div>
 
       <div class="col-md-3" style="float:left">
         <div class="card mb-2">
           <img src="images/happyfamily.jpg" class="card-img-top" width="100%" height="168px">
-          <div class="card-body">
-            <h4 class="card-title"><a href="#">HAPPY FAMILY</a></h4>
-            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
-          </div>
+          <a href="#">
+            <div class="card-body">
+              <h4 class="card-title">HAPPY FAMILY</h4>
+              <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+            </div>
+          </a>
         </div>
       </div>
 
       <div class="col-md-3" style="float:left">
         <div class="card mb-2">
           <img src="images/coupleup.jpg" class="card-img-top" width="100%" height="168px">
-          <div class="card-body">
-            <h4 class="card-title"><a href="#">COUPLE-UP</a></h4>
-            <img src="images/see-all.png" class="see-all-arrow" alt="see all">
-          </div>
+          <a href="#">
+            <div class="card-body">
+              <h4 class="card-title">COUPLE-UP</h4>
+              <img src="images/see-all.png" class="see-all-arrow" alt="see all">
+            </div>
+          </a>
         </div>
       </div>
     </div>
