--- a/index.html
+++ b/index.html
@@ -303,6 +303,33 @@
     </div>
   </div>
 
+  <footer>
+    <div class="container-fluid" style="padding: 0px; margin: 0px;">
+    <div class="footer">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="logo" href="#">J-PIZZA
+            <p>Come Hungry Leave Happy</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+         <div class="about">
+           <a href="#">ABOUT US</a>
+         </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="copyright">
+            Copyright @2020 Andrew John
+          </div>
+         </div>
+      </div>
+    </div>
+    
+    </div>
+  </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
