--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1>FEATURED SPECIALS</h1>
         </div>
         <div class="col-md-6">
-          <a href="#">See all&nbsp;<img src="images/see-all.png" alt="see all"></a>
+          <a href="special.html">See all&nbsp;<img src="images/see-all.png" alt="see all"></a>
         </div>
       </div>
     </div>
@@ -303,30 +303,30 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="page-footer">
     <div class="container-fluid" style="padding: 0px; margin: 0px;">
-    <div class="footer">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="logo" href="#">J-PIZZA
-            <p>Come Hungry Leave Happy</p>
+      <div class="footer">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="logo" href="#">J-PIZZA
+              <p>Come Hungry Leave Happy</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="about">
+              <a href="#">ABOUT US</a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="copyright">
+              Copyright @2020 Andrew John
+            </div>
           </div>
         </div>
-
-        <div class="col-md-4">
-         <div class="about">
-           <a href="#">ABOUT US</a>
-         </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="copyright">
-            Copyright @2020 Andrew John
-          </div>
-         </div>
       </div>
-    </div>
-    
+
     </div>
   </footer>
 
