--- a/meat-favourites.html
+++ b/meat-favourites.html
@@ -9,14 +9,14 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/special.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/meat-favourites.css" rel="stylesheet" type="text/css" media="all">
     <title>J-PIZZA</title>
 </head>
 
 <body class="container-fluid" style="padding: 0; margin: 0;">
 
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand logo" href="#">J-PIZZA
+        <a class="navbar-brand logo" href="index.html">J-PIZZA
             <p>Come Hungry Leave Happy</p>
         </a>
 
@@ -40,7 +40,7 @@
 
     <div class="container-fluid" style="margin: 0px; padding: 0px;">
         <div class="specialheader text-center">
-            <h1>SPECIALS</h1>
+            <h1>MEAT PIZZAS</h1>
         </div>
     </div>
 
@@ -51,13 +51,17 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/pizza3.png" class="card-img" alt="special">
+                                <img src="images/pepperoni.jpg" class="card-img" alt="special" width="100%"
+                                    height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">UNLIMITED MEDIUM 2-TOPPING PIZZAS</h5>
-                                    <p class="card-text">Medium 2-topping pizza</p>
-                                    <p class="card-text"><span>Starting from ksh. 1100/=</span></p>
+                                    <h5 class="card-title">PEPPERONI</h5>
+                                    <p class="card-text">The all-time favourite - It doesn't get any more iconic than
+                                        this. Savoury pepperoni, homestyle sauce, and ooey-gooey, stretchy mozzarella.
+                                        Perfection!
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
                                     <button type="submit"><a href="#">ADD TO CART</a></button>
                                 </div>
                             </div>
@@ -69,13 +73,17 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/pizza1.png" class="card-img" alt="special">
+                                <img src="images/buffalochicken.jpg" class="card-img" alt="special" width="100%"
+                                    height="220px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">2-LARGE PIZZAS + A DRINK</h5>
-                                    <p class="card-text">2 Large Pizzas with 4 toppings combined, a Drink and 2 Dips</p>
-                                    <p class="card-text"><span>Starting from ksh. 2800/=</span></p>
+                                    <h5 class="card-title">BUFFALO CHICKEN</h5>
+                                    <p class="card-text">This tangy, spicy pie is made for you. Kick off with
+                                        Buffalo blue cheese sauce, grilled chicken, red onions, fire-roasted red peppers
+                                        and mozzarella cheese.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
                                     <button type="submit"><a href="#">ADD TO CART</a></button>
                                 </div>
                             </div>
@@ -86,13 +94,17 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/pizza1.png" class="card-img" alt="special">
+                                <img src="images/hotandspicy.jpeg" class="card-img" alt="special" width="100%"
+                                    height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">LARGE PIZZA + A DRINK</h5>
-                                    <p class="card-text">Large 3-topping pizza, 10pcs wings, a Drinks and 2 dips</p>
-                                    <p class="card-text"><span>Starting from ksh. 2000/=</span></p>
+                                    <h5 class="card-title">HOT AND SPICY</h5>
+                                    <p class="card-text">Some people just love to brave the heat. Well, step-up you
+                                        spice-monsters. This slice of fire combines spicy Italian sausage, hot banana
+                                        peppers, and mozzarella cheese.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
                                     <button type="submit"><a href="#">ADD TO CART</a></button>
                                 </div>
                             </div>
@@ -102,13 +114,56 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/pizza3.png" class="card-img" alt="special">
+                                <img src="images/meatsupreme.png" class="card-img" alt="special" width="100%"
+                                    height="220px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">2-MEDIUM PIZZAS + A DRINK</h5>
-                                    <p class="card-text">2 medium pizzas with 4 toppings combined, a Drinks and 2 dips
-                                    <p class="card-text"><span>Starting from ksh. 2200/=</span></p>
+                                    <h5 class="card-title">MEAT SUPREME</h5>
+                                    <p class="card-text">Topped with classic pepperoni, bacon crumble, salami, spicy
+                                        Italian sausage, mozzarella cheese, and Italiano blend seasoning. For the
+                                        meat-lover in you.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
+                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/mushroom.jpg" class="card-img" alt="special" width="100%"
+                                    height="250px">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">MUSHROOM</h5>
+                                    <p class="card-text">Topped with fresh mushrooms, red onions, bacon crumble,
+                                        Italiano blend seasoning, and made with creamy garlic sauce and mozzarella
+                                        cheese. Tip: Try customizing to a thick crust.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
+                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/sweetchili.png" class="card-img" alt="special">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">SWEET CHILLI CHICKEN</h5>
+                                    <p class="card-text">Isn't it beautiful when diverse flavours come together? Imagine
+                                        a whole grain crust with grilled chicken, broccoli, sun-dried tomatoes, goat
+                                        cheese, mozzarella cheese and sweet chili Thai sauce.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
                                     <button type="submit"><a href="#">ADD TO CART</a></button>
                                 </div>
                             </div>
@@ -124,7 +179,7 @@
             <div class="footer">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="logo" href="index.html">J-PIZZA
+                        <div class="logo" href="#">J-PIZZA
                             <p>Come Hungry Leave Happy</p>
                         </div>
                     </div>
