--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <p class="card-text">Classic marinara sauce, authentic old-world pepperoni,
                 all-natural Italian sausage, slow-roasted ham, hardwood smoked bacon, seasoned
                 pork and beef.</p>
-              <center><button type="button"><a href="meat-favourites.html">VIEW</a></button></center>
+              <center><a href="meatpizzas.html"><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
               <p class="card-text">roasted red peppers, baby spinach, onions, mushrooms, tomatoes,
                 and black olives. It's also topped with cheese It's an awesome way to
                 eat your vegetables!</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href="veggiepizzas.html"><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
               <p class="card-text">carefully prepared specialty pizza made with ingredients
                 not normally found on pizza, includes a wider variety of toppings and a more intricate
                 preparation process.</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href=""><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -178,7 +178,7 @@
               <p class="card-text">We have various crust like: Keto pepperoni, Keto protein,
                 Keto Pesto Margherita, Cauli Super Plant, Cauliflower Crust pizza, Cauli pesto
                 and Cauli blanca</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href=""><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -193,7 +193,7 @@
               <h5 class="card-title">DRINKS</h5>
               <p class="card-text">We have various drinks to take with your pizza, taking pizza
                 without a drink by your side can be boring.</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href=""><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
               <h5 class="card-title">SALADS</h5>
               <p class="card-text">We have various salads to take with your pizza, make your pizza
                 eating healthy with salads.</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href=""><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
               <h5 class="card-title">WINGS</h5>
               <p class="card-text">We offer a variety of chicken wings. Eat to your fill, its a
                 good accompaniment with pizza.</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href=""><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
@@ -229,7 +229,7 @@
               <h5 class="card-title">DIPS</h5>
               <p class="card-text">We offer a variety of dips like: BBQ sauce, HOT sauce,
                 MARINARA sauce and RANCH sauce.</p>
-              <center><button type="submit"><a href="#">VIEW</a></button></center>
+              <center><a href=""><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
