--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <p class="card-text">carefully prepared specialty pizza made with ingredients
                 not normally found on pizza, includes a wider variety of toppings and a more intricate
                 preparation process.</p>
-              <center><a href=""><button type="button">VIEW</button></a></center>
+              <center><a href="gourmetthins.html"><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
