--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <p class="card-text">We have various crust like: Keto pepperoni, Keto protein,
                 Keto Pesto Margherita, Cauli Super Plant, Cauliflower Crust pizza, Cauli pesto
                 and Cauli blanca</p>
-              <center><a href=""><button type="button">VIEW</button></a></center>
+              <center><a href="crust.html"><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
