--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <h5 class="card-title">WINGS</h5>
               <p class="card-text">We offer a variety of chicken wings. Eat to your fill, its a
                 good accompaniment with pizza.</p>
-              <center><a href=""><button type="button">VIEW</button></a></center>
+              <center><a href="wings.html"><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
