--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <h5 class="card-title">DIPS</h5>
               <p class="card-text">We offer a variety of dips like: BBQ sauce, HOT sauce,
                 MARINARA sauce and RANCH sauce.</p>
-              <center><a href=""><button type="button">VIEW</button></a></center>
+              <center><a href="dip.html"><button type="button">VIEW</button></a></center>
             </div>
           </div>
         </div>
