--- a/crust.html
+++ b/crust.html
@@ -117,7 +117,7 @@
             <div class="footer">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="logo" href="#">J-PIZZA
+                        <div class="logo">J-PIZZA
                             <p>Come Hungry Leave Happy</p>
                         </div>
                     </div>
