--- a/special.html
+++ b/special.html
@@ -16,7 +16,7 @@
 <body class="container-fluid" style="padding: 0; margin: 0;">
 
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand logo" href="#">J-PIZZA
+        <a class="navbar-brand logo" href="index.html">J-PIZZA
             <p>Come Hungry Leave Happy</p>
         </a>
 
@@ -124,7 +124,7 @@
             <div class="footer">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="logo" href="index.html">J-PIZZA
+                        <div class="logo">J-PIZZA
                             <p>Come Hungry Leave Happy</p>
                         </div>
                     </div>
