--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <h1>ALL FOR YOU</h1>
         </div>
         <div class="col-md-6">
-          <a href="#">See all&nbsp;<img src="images/see-all.png" alt="see all"></a>
+          <a href="all-for-you.html">See all&nbsp;<img src="images/see-all.png" alt="see all"></a>
         </div>
       </div>
     </div>
