--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <div class="col-md-3" style="float:left">
         <div class="card mb-2">
           <img src="images/movie.jpg" class="card-img-top" width="100%" height="168px">
-          <a href="#">
+          <a href="movienight.html">
             <div class="card-body">
               <h4 class="card-title">MOVIE NIGHT</h4>
               <img src="images/see-all.png" class="see-all-arrow" alt="see all">
