--- a/movienight.html
+++ b/movienight.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/all-for-you.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/movienight.css" rel="stylesheet" type="text/css" media="all">
     <title>J-PIZZA</title>
 </head>
 
@@ -39,8 +39,22 @@
     </nav>
 
     <div class="container-fluid" style="margin: 0px; padding: 0px;">
-        <div class="specialheader text-center">
-            <h1>ALL FOR YOU</h1>
+        <div class="specialheader">
+            <h1 class="text-center">MOVIE NIGHT</h1>
+            <div class="specialheader2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><span>Your special comes with 4 tasty Items.</span></p>
+                        <p>x-Large Pizza(of your choice), a drink, Marinara dip sauce, 10 pieces of
+                            of chicken wings
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="card-text price">ksh. 3000/=</p>
+                        <a href=""><button type="button">ADD TO CART</button></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -84,8 +98,7 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/movie.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/movie.jpg" class="card-img" alt="special" width="100%" height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -99,8 +112,7 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/veggie.jpg" class="card-img" alt="special" width="100%"
-                                    height="220px">
+                                <img src="images/veggie.jpg" class="card-img" alt="special" width="100%" height="220px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
